--- a/index.html
+++ b/index.html
@@ -11,22 +11,24 @@
 <body>
   <div class="container">
     <h1>BMI(Body Mass Index) Calculator</h1>
-    <form>
-      <p><label>Height in CM: </label>
-        <input type="text" id="height" maxlength="3" />
+    <form >
+      <p>
+        <!-- <label>Height in CM: </label> -->
+        <input type="text" id="height" maxlength="3" required placeholder="Height in CM" />
       </p>
-      <p><label>Weight in KG: </label>
-        <input type="text" id="weight" maxlength="3" />
+      <p>
+        <!-- <label>Weight in KG: </label> -->
+        <input type="text" id="weight" maxlength="3" required placeholder="Weight in KG" />
       </p>
       <button>Calculate</button>
       <div id="results"></div>
       <div id="person"></div>
 
       <div id="weight-guide">
-        <h3>BMI Weight Guide</h3>
-        <p>Under Weight = Less than 18.6</p>
+        <h3 style="color: cadetblue;">BMI Weight Guide</h3>
+        <p style="color:red">Under Weight = Less than 18.6</p>
         <p>Normal Range = 18.6 and 24.9</p>
-        <p>Overweight = Greater than 24.9</p>
+        <p style="color: lightgreen">Overweight = Greater than 24.9</p>
       </div>
     </form>
   </div>
