--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div id="person"></div>
 
       <div id="weight-guide">
-        <h3 style="color: cadetblue;">BMI Weight Guide</h3>
+        <h3 style="color: navajowhite;">BMI Weight Guide</h3>
         <p style="color:red">Under Weight = Less than 18.6</p>
         <p>Normal Range = 18.6 and 24.9</p>
         <p style="color: lightgreen">Overweight = Greater than 24.9</p>
